--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -7,20 +7,140 @@ body {
   display: block;
 }
 
+@font-face {
+  font-family: me123;
+  src: url("/assets/fonts/me123.ttf");
+}
+@font-face {
+  font-family: venusRising;
+  src: url("/assets/fonts/venusRising.otf");
+}
+#home .show .img-fluid {
+  height: 100vh;
+}
 #home .show .navbar {
-  top: 1%;
+  top: 0%;
   position: absolute;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 #home .show .navbar .navbar-brand .img-fluid {
-  height: 80px;
-  max-width: 250px;
+  height: 60px;
+  max-width: 120px;
   margin-left: 10px;
 }
 #home .show .navbar #btnConnect {
+  top: 6%;
+  right: -950%;
+  font-size: 1.3em;
+  cursor: pointer;
+  margin-top: 20px;
+  position: relative;
   color: azure;
   border: transparent;
+  transform: translate(-50%, -50%);
   background: transparent;
+}
+#home .show .navbar #btnConnect:hover {
+  opacity: 0.8;
+}
+#home .show .listSupport {
+  top: 92%;
+  left: 50%;
+  position: absolute;
+  text-align: center;
+  transform: translate(-50%, -50%);
+}
+#home .show .listSupport .row {
+  justify-content: center;
+  text-align: center;
+  flex-wrap: nowrap;
+}
+#home .show .listSupport .row .col-lg-4 #btnPlaystation {
+  height: 50px;
+  width: 100px;
+  margin-right: 20px;
+  margin-left: 20px;
+  border-radius: 5px;
+  border: 1px solid darkblue;
+  background-color: darkblue;
+}
+#home .show .listSupport .row .col-lg-4 #btnPlaystation .fa-brands {
+  font-size: 2em;
+  color: azure;
+  text-decoration: none;
+}
+#home .show .listSupport .row .col-lg-4 #btnXbox {
+  height: 50px;
+  width: 100px;
+  margin-right: 20px;
+  margin-left: 20px;
+  border-radius: 5px;
+  border: 1px solid darkblue;
+  background-color: darkgreen;
+}
+#home .show .listSupport .row .col-lg-4 #btnXbox .fa-brands {
+  font-size: 2em;
+  color: azure;
+  text-decoration: none;
+}
+#home .show .listSupport .row .col-lg-4 #btnSteam {
+  height: 50px;
+  width: 100px;
+  margin-right: 20px;
+  margin-left: 20px;
+  border-radius: 5px;
+  border: 1px solid darkblue;
+  background-color: darkgrey;
+}
+#home .show .listSupport .row .col-lg-4 #btnSteam .fa-brands {
+  font-size: 2em;
+  color: azure;
+  text-decoration: none;
+}
+#home .about .img-fluid {
+  height: 48vh;
+}
+#home .about .info {
+  margin-left: 40px;
+  margin-top: -350px;
+}
+#home .about .info .present {
+  letter-spacing: 2px;
+  color: azure;
+  font-family: me123;
+  text-shadow: 2px 2px 6px #000000, 2px 4px 0px rgba(0, 0, 0, 0.15);
+}
+#home .about .info .sentence {
+  margin-left: 40px;
+  text-align: center;
+  max-width: 770px;
+  margin-top: 12px;
+}
+#home .about .info .sentence .what {
+  line-height: 29px;
+  font-size: 1.1em;
+  color: azure;
+  font-family: venusRising;
+  text-shadow: 2px 2px 6px #000000, 2px 1px 0px rgba(0, 0, 0, 0.15);
+}
+#home .about .info .sentence #btnMoreInfo {
+  padding: 5px;
+  opacity: 0.4;
+  cursor: pointer;
+  color: azure;
+  border-radius: 5px;
+  font-family: me123;
+  border: 1px solid darkblue;
+  background-color: rgb(0, 0, 0);
+}
+#home .about .info .sentence #btnMoreInfo:hover {
+  opacity: 1;
+}
+#home .characters {
+  margin-top: 80px;
+}
+#home .characters .img-fluid {
+  height: 62vh;
 }/*# sourceMappingURL=styles.css.map */
