--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -9,31 +9,164 @@ body {
 
 // ROOT & MIXIN 
 $firstColor : azure;
+$secondColor: darkblue;
+$thirdColor: darkgreen;
+$fourColor: darkgrey;
+$firstFont: me123;
+$secondFont: venusRising;
 
 @mixin flex ($flexDirection) {
     display: flex;
     flex-direction: $flexDirection;
 }
 
+// FONTS
+@font-face {
+    font-family: $firstFont;
+    src: url('/assets/fonts/me123.ttf');
+}
+
+@font-face {
+    font-family: $secondFont;
+    src: url('/assets/fonts/venusRising.otf');
+}
+
 #home {
     .show {
+        .img-fluid {
+            height: 100vh;
+        }
         .navbar {
-            top: 1%;
+            top: 0%;
             position: absolute;
             @include flex (row);
             justify-content: space-between;
             .navbar-brand {
                 .img-fluid {
-                    height: 80px;
-                    max-width: 250px;
+                    height: 60px;
+                    max-width: 120px;
                     margin-left: 10px;
                 }
             }
             #btnConnect {
+                top: 6%;
+                right: -950%;
+                font-size: 1.3em;
+                cursor: pointer;
+                margin-top: 20px;
+                position: relative;
                 color: $firstColor;
                 border: transparent;
+                transform: translate(-50%, -50%);
                 background: transparent;
+                &:hover {
+                    opacity: 0.8;
+                }
             }
+        }
+        .listSupport {
+            top: 92%;
+            left: 50%;
+            position: absolute;
+            text-align: center;
+            transform: translate(-50%, -50%);
+            .row {
+                justify-content: center;
+                text-align: center;
+                flex-wrap: nowrap;
+                .col-lg-4 {
+                    #btnPlaystation {
+                        height: 50px;
+                        width: 100px;
+                        margin-right: 20px;
+                        margin-left: 20px;
+                        border-radius: 5px;
+                        border: 1px solid $secondColor;
+                        background-color: $secondColor;
+                        .fa-brands {
+                            font-size: 2.0em;
+                            color: $firstColor;
+                            text-decoration: none;
+                        }
+                    }
+                    #btnXbox {
+                        height: 50px;
+                        width: 100px;
+                        margin-right: 20px;
+                        margin-left: 20px;
+                        border-radius: 5px;
+                        border: 1px solid $secondColor;
+                        background-color: $thirdColor;
+                        .fa-brands {
+                            font-size: 2.0em;
+                            color: $firstColor;
+                            text-decoration: none;
+                        }
+                    }
+                    #btnSteam {
+                        height: 50px;
+                        width: 100px;
+                        margin-right: 20px;
+                        margin-left: 20px;
+                        border-radius: 5px;
+                        border: 1px solid $secondColor;
+                        background-color: $fourColor;
+                        .fa-brands {
+                            font-size: 2.0em;
+                            color: $firstColor;
+                            text-decoration: none;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .about {
+        .img-fluid {
+            height: 48vh;
+        }
+        .info {
+            margin-left: 40px;
+            margin-top: -350px;
+            .present {
+                letter-spacing: 2px;
+                color: $firstColor;
+                font-family: $firstFont;
+                text-shadow: 2px 2px 6px #000000, 2px 4px 0px rgba(0,0,0,0.15);
+            }
+            .sentence {
+                margin-left: 40px;
+                text-align: center;
+                max-width: 770px;
+                margin-top: 12px;
+                .what {
+                    line-height: 29px;
+                    font-size: 1.1em;
+                    color: $firstColor;
+                    font-family: $secondFont;
+                    text-shadow: 2px 2px 6px #000000, 2px 1px 0px rgba(0,0,0,0.15);
+
+                }
+                #btnMoreInfo {
+                    padding: 5px;
+                    opacity: 0.4;
+                    cursor: pointer;
+                    color: $firstColor;
+                    border-radius: 5px;
+                    font-family: $firstFont;
+                    border: 1px solid $secondColor;
+                    background-color: rgb(0, 0, 0);
+                    &:hover {
+                        opacity: 1.0;
+                    }
+                }
+            }
+        }
+    }
+    .characters {
+        margin-top: 80px;
+        .img-fluid {
+            height: 62vh;
         }
     }
 }
