--- a/frontend/src/app/main/home/home.component.html
+++ b/frontend/src/app/main/home/home.component.html
@@ -1,38 +1,83 @@
 <section id="home">
     <div class="show">
-        <img src="/assets/pict/massEffectMain.jpg" class="img-fluid w-100" alt="pictMain" />
-        <div class="navbar navbar-expand-lg">
-            <div class="navbar-brand">
-                <a [routerLink]="'/home'"><img src="/assets/pict/massEffectN7Logo.png" class="img-fluid w-100" alt="n7Logo" /></a>
-            </div>
-            <button type="button" id="btnConnect" data-bs-toggle="modal" data-bs-target="#connect"><i class="fa fa-sign-in" aria-hidden="true"></i></button>
-        </div>
-        <div class="listSupport">
-            <div class="row">
-                <div class="col-lg-4">
-                    <button type="button" id="btnPlaystation" appCard><a href="https://www.playstation.com/fr-be/games/mass-effect-legendary-edition/"><i class="fa-brands fa-playstation"></i></a></button>
+        <ngb-carousel>
+            <ng-template ngbSlide *ngFor="let mass of massEffect">
+                <div class="picsum-img-wrapper">
+                    <img [src]="mass.wallpaper" class="img-fluid w-100" />
+                    <div class="navbar navbar-expand-lg">
+                        <div class="navbar-brand">
+                            <a [routerLink]="'/home'"><img src="/assets/pict/massEffectN7Logo.png" class="img-fluid w-100" alt="n7Logo" /></a>
+                        </div>
+                    </div>
+                    <div class="listSupport">
+                        <div class="logo">
+                            <img [src]="mass.logo" class="img-fluid w-100" alt="massEffectLogo" />
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <button type="button" id="btnPlaystation" appCard><a [href]="mass.psn"><i class="fa-brands fa-playstation"></i></a></button>
+                            </div>
+                            <div class="col-lg-4">
+                                <button type="button" id="btnXbox" appCard><a [href]="mass.xbox"><i class="fa-brands fa-xbox"></i></a></button>
+                            </div>
+                            <div class="col-lg-4">
+                                <button type="button" id="btnSteam" appCard><a [href]="mass.pc"><i class="fa-brands fa-steam"></i></a></button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-4">
-                    <button type="button" id="btnXbox" appCard><a href="https://www.xbox.com/fr-FR/games/store/mass-effect-edition-legendaire/9PKWHT7G60WQ"><i class="fa-brands fa-xbox"></i></a></button>
-                </div>
-                <div class="col-lg-4">
-                    <button type="button" id="btnSteam" appCard><a href="https://store.steampowered.com/app/1328670/Mass_Effect_Legendary_Edition/"><i class="fa-brands fa-steam"></i></a></button>
-                </div>
-            </div>
-        </div>
+            </ng-template>
+	    </ngb-carousel>
     </div>
     <div class="about">
-        <img src="/assets/pict/massEffectNormandy.jpg" class="img-fluid w-100" alt="massEffectCitadel" />
         <div class="info">
             <h2 class="present">A PROPOS DE MASS EFFECT</h2>
             <div class="sentence">
                 <p class="what">Explorez les planètes, créer des liens avec d’autres personnages, faites vos choix et trouver un moyen de vaincre les Moisseneurs.</p>
                 <p class="what">Par les créateurs de Baldur’s Gate, voici une saga d'Action-RPG science-fiction la plus apprécié de tous.</p>
-                <button type="button" id="btnMoreInfo" [routerLink]="'/about'">EN SAVOIR PLUS</button>
             </div>
         </div>
     </div>
-    <div class="characters">
-        <img src="/assets/pict/massEffectCharacters.jpeg" class="img-fluid w-100" alt="characters" />
+    <div class="contact">
+        <h1 class="titleContact">Contact</h1>
+        <div class="contactContain">
+            <div class="form-area">
+                <form [formGroup]="answer" (ngSubmit)="contact()">
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-lg-6">
+                            <label></label>
+                            <input type="email" class="form-control" name="adress" placeholder="Adresse email" formControlName="adress" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$" minlength="15" [ngClass]="{ 'is.invalid': answer.get('adress')?.touched && answer.get('adress')?.invalid }" />
+                                <div class="warning" *ngIf="answer.get('adress')?.invalid && (answer.get('adress')?.dirty || answer.get('adress')?.touched)">
+                                    <div class="alert alert-danger" *ngIf="answer.get('adress')?.hasError('required')">L'adresse email est requise</div>
+                                    <div class="alert alert-danger" *ngIf="answer.get('adress')?.hasError('pattern')">La forme de l'adresse email est incorrecte</div>
+                                    <div class="alert alert-danger" *ngIf="answer.get('adress')?.hasError('minlength')">L'adresse email doit avoir au moins 15 caractères</div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                            <label></label>
+                            <input type="text" class="form-control" name="subject" placeholder="Sujet de conversation" formControlName="subject" [ngClass]="{ 'is.invalid': answer.get('subject')?.touched && answer.get('subject')?.invalid }" />
+                                <div class="warning" *ngIf="answer.get('subject')?.invalid && (answer.get('subject')?.dirty || answer.get('subject')?.touched)">
+                                    <div class="alert alert-danger" *ngIf="answer.get('subject')?.hasError('required')">Le sujet de conversation est requis</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label></label>
+                        <textarea name="message" placeholder="Message" formControlName="message" minlength="200" cols="30" rows="9" [ngClass]="{ 'is.invalid': answer.get('message')?.touched && answer.get('message')?.invalid }"></textarea>
+                        <div class="warning" *ngIf="answer.get('message')?.invalid && (answer.get('message')?.dirty || answer.get('message')?.touched)">
+                            <div class="alert alert-danger" *ngIf="answer.get('message')?.hasError('required')">Le message est requis</div>
+                            <div class="alert alert-danger" *ngIf="answer.get('message')?.hasError('minlength')">Le message doit avoir au moins 200 caractères</div>
+                        </div>
+                    </div>
+                    <button type="submit" id="btnSend" [disabled]="answer.invalid">ENVOYER</button>
+                </form>
+            </div>
+        </div>
+        <div class="footer">
+            <p class="copy">© Mass Effect 2023</p>
+            <button type="button" id="btnConnect" [routerLink]="'/login'"><i class="fa fa-sign-in" aria-hidden="true"></i></button>
+        </div>
     </div>
 </section>
