--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -30,29 +30,19 @@ body {
   max-width: 120px;
   margin-left: 10px;
 }
-#home .show .navbar #btnConnect {
-  top: 6%;
-  right: -950%;
-  font-size: 1.3em;
-  cursor: pointer;
-  margin-top: 20px;
-  position: relative;
-  color: azure;
-  border: transparent;
-  transform: translate(-50%, -50%);
-  background: transparent;
-}
-#home .show .navbar #btnConnect:hover {
-  opacity: 0.8;
-}
 #home .show .listSupport {
-  top: 92%;
+  top: 84%;
   left: 50%;
   position: absolute;
   text-align: center;
   transform: translate(-50%, -50%);
 }
+#home .show .listSupport .logo .img-fluid {
+  height: 100px;
+  max-width: 250px;
+}
 #home .show .listSupport .row {
+  margin-top: 20px;
   justify-content: center;
   text-align: center;
   flex-wrap: nowrap;
@@ -99,29 +89,38 @@ body {
   color: azure;
   text-decoration: none;
 }
-#home .about .img-fluid {
-  height: 48vh;
+#home .about {
+  height: 450px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url("/assets/pict/massEffectAbout.png");
 }
 #home .about .info {
-  margin-left: 40px;
-  margin-top: -350px;
+  top: 125%;
+  left: 73%;
+  max-width: 900px;
+  position: absolute;
+  transform: translate(-50%, -50%);
 }
 #home .about .info .present {
-  letter-spacing: 2px;
+  font-size: 1.6em;
+  text-align: center;
+  letter-spacing: 3px;
   color: azure;
   font-family: me123;
   text-shadow: 2px 2px 6px #000000, 2px 4px 0px rgba(0, 0, 0, 0.15);
 }
 #home .about .info .sentence {
-  margin-left: 40px;
+  width: 800px;
   text-align: center;
-  max-width: 770px;
   margin-top: 12px;
 }
 #home .about .info .sentence .what {
-  line-height: 29px;
+  line-height: 34px;
   font-size: 1.1em;
   color: azure;
+  letter-spacing: 3px;
   font-family: venusRising;
   text-shadow: 2px 2px 6px #000000, 2px 1px 0px rgba(0, 0, 0, 0.15);
 }
@@ -138,9 +137,103 @@ body {
 #home .about .info .sentence #btnMoreInfo:hover {
   opacity: 1;
 }
-#home .characters {
-  margin-top: 80px;
+#home .contact {
+  height: auto;
+  margin-bottom: -20px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url("/assets/pict/massEffectContact.png");
 }
-#home .characters .img-fluid {
-  height: 62vh;
+#home .contact .titleContact {
+  padding-top: 20px;
+  text-align: center;
+  color: azure;
+  font-family: me123;
+}
+#home .contact .contactContain {
+  width: 40%;
+  display: block;
+  margin: 10px auto;
+  border-radius: 40px;
+  padding-right: 18px;
+  padding-bottom: 20px;
+}
+#home .contact .contactContain .form-area {
+  margin-left: 55px;
+  text-align: center;
+}
+#home .contact .contactContain .form-area form .alert {
+  width: 80%;
+  display: block;
+  margin: 5px auto;
+}
+#home .contact .contactContain .form-area form .alert p {
+  font-family: me123;
+}
+#home .contact .contactContain .form-area form .form-group .row .col-lg-6 input {
+  width: 100%;
+  height: 40px;
+  font-size: 0.8em;
+  max-width: 300px;
+  border-radius: 5px;
+  font-family: venusRising;
+}
+#home .contact .contactContain .form-area form .form-group textarea {
+  width: 95%;
+  margin-left: -30px;
+  margin-top: 15px;
+  font-size: 0.8em;
+  border-radius: 5px;
+  font-family: venusRising;
+}
+#home .contact .contactContain .form-area form .form-group .warning {
+  margin-left: -35px;
+}
+#home .contact .contactContain .form-area form .form-group .warning .alert {
+  width: 85%;
+  max-width: 800px;
+}
+#home .contact .contactContain .form-area form #btnSend {
+  border: none;
+  display: block;
+  cursor: pointer;
+  color: azure;
+  margin: 8px auto;
+  font-size: 1.2em;
+  padding: 10px 20px;
+  border-radius: 5px;
+  background-color: darkblue;
+  transition: all 0.25ms ease;
+}
+#home .contact .contactContain .form-area form #btnSend:active {
+  background-color: darkgreen;
+}
+#home .contact .footer {
+  padding: 10px;
+  margin-top: -10px;
+  margin-bottom: -30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+#home .contact .footer .copy {
+  margin-top: -15px;
+  font-size: 1.4em;
+  letter-spacing: 2px;
+  padding-bottom: 10px;
+  text-align: center;
+  color: azure;
+  font-family: me123;
+}
+#home .contact .footer #btnConnect {
+  font-size: 1.3em;
+  cursor: pointer;
+  margin-top: -20px;
+  color: azure;
+  border: transparent;
+  background: transparent;
+}
+#home .contact .footer #btnConnect:hover {
+  opacity: 0.8;
 }/*# sourceMappingURL=styles.css.map */
