--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -48,29 +48,21 @@ $secondFont: venusRising;
                     margin-left: 10px;
                 }
             }
-            #btnConnect {
-                top: 6%;
-                right: -950%;
-                font-size: 1.3em;
-                cursor: pointer;
-                margin-top: 20px;
-                position: relative;
-                color: $firstColor;
-                border: transparent;
-                transform: translate(-50%, -50%);
-                background: transparent;
-                &:hover {
-                    opacity: 0.8;
-                }
-            }
         }
         .listSupport {
-            top: 92%;
+            top: 84%;
             left: 50%;
             position: absolute;
             text-align: center;
             transform: translate(-50%, -50%);
+            .logo {
+                .img-fluid {
+                    height: 100px;
+                    max-width: 250px;
+                }
+            }
             .row {
+                margin-top: 20px;
                 justify-content: center;
                 text-align: center;
                 flex-wrap: nowrap;
@@ -122,27 +114,34 @@ $secondFont: venusRising;
         }
     }
     .about {
-        .img-fluid {
-            height: 48vh;
-        }
+        height: 450px;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-image: url('/assets/pict/massEffectAbout.png');
         .info {
-            margin-left: 40px;
-            margin-top: -350px;
+            top: 125%;
+            left: 73%;
+            max-width: 900px;
+            position: absolute;
+            transform: translate(-50%, -50%);
             .present {
-                letter-spacing: 2px;
+                font-size: 1.6em;
+                text-align: center;
+                letter-spacing: 3px;
                 color: $firstColor;
                 font-family: $firstFont;
                 text-shadow: 2px 2px 6px #000000, 2px 4px 0px rgba(0,0,0,0.15);
             }
             .sentence {
-                margin-left: 40px;
+                width: 800px;
                 text-align: center;
-                max-width: 770px;
                 margin-top: 12px;
                 .what {
-                    line-height: 29px;
+                    line-height: 34px;
                     font-size: 1.1em;
                     color: $firstColor;
+                    letter-spacing: 3px;
                     font-family: $secondFont;
                     text-shadow: 2px 2px 6px #000000, 2px 1px 0px rgba(0,0,0,0.15);
 
@@ -163,10 +162,111 @@ $secondFont: venusRising;
             }
         }
     }
-    .characters {
-        margin-top: 80px;
-        .img-fluid {
-            height: 62vh;
+    .contact {
+        height: auto;
+        margin-bottom: -20px;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-image: url('/assets/pict/massEffectContact.png');
+        .titleContact {
+            padding-top: 20px;
+            text-align: center;
+            color: $firstColor;
+            font-family: $firstFont;
+        }
+        .contactContain {
+            width: 40%;
+            display: block;
+            margin: 10px auto;
+            border-radius: 40px;
+            padding-right: 18px;
+            padding-bottom: 20px;
+            .form-area {
+                margin-left: 55px;
+                text-align: center;
+                form {
+                    .alert {
+                        width: 80%;
+                        display: block;
+                        margin: 5px auto;
+                        p {
+                            font-family: $firstFont;
+                        }
+                    }
+                    .form-group {
+                        .row {
+                            .col-lg-6 {
+                                input {
+                                    width: 100%;
+                                    height: 40px;
+                                    font-size: 0.8em;
+                                    max-width: 300px;
+                                    border-radius: 5px;
+                                    font-family: $secondFont;
+                                }
+                            }
+                        }
+                        textarea {
+                            width: 95%;
+                            margin-left: -30px;
+                            margin-top: 15px;
+                            font-size: 0.8em;
+                            border-radius: 5px;
+                            font-family: $secondFont;
+                        }
+                        .warning {
+                            margin-left: -35px;
+                            .alert {
+                                width: 85%;
+                                max-width: 800px;
+                            }
+                        }
+                    }
+                    #btnSend {
+                        border: none;
+                        display: block;
+                        cursor: pointer;
+                        color: $firstColor;
+                        margin: 8px auto;
+                        font-size: 1.2em;
+                        padding: 10px 20px;
+                        border-radius: 5px;
+                        background-color: $secondColor;
+                        transition: all 0.25ms ease;
+                        &:active {
+                            background-color: $thirdColor;
+                        }
+                    }
+                }
+            }
+        }
+        .footer {
+            padding: 10px;
+            margin-top: -10px;
+            margin-bottom: -30px;
+            @include flex (row);
+            justify-content: space-between;
+            .copy {
+                margin-top: -15px;
+                font-size: 1.4em;
+                letter-spacing: 2px;
+                padding-bottom: 10px;
+                text-align: center;
+                color: $firstColor;
+                font-family: $firstFont;
+            }
+            #btnConnect {
+                font-size: 1.3em;
+                cursor: pointer;
+                margin-top: -20px;
+                color: $firstColor;
+                border: transparent;
+                background: transparent;
+                &:hover {
+                    opacity: 0.8;
+                }
+            }
         }
     }
 }
